--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>My React App</title>
     </head>
-    <body>
+    <body style="padding: 0; margin: 0">
         <div id="app"></div>
     </body>
 </html>
