--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>My React App</title>
+
+        <link rel="stylesheet" href="./src/css/bootstrap.min.css">
+        <link rel="stylesheet" href="./src/css/style.css">
     </head>
-    <body style="padding: 0; margin: 0">
+    <body>
         <div id="app"></div>
     </body>
 </html>
